<resources>
    <string name="app_name">Build a route</string>
    <string name="progress_dialog_title">Loading …</string>
    <string name="please_wait">Please wait</string>
    <string name="add_start">Tap to add start point</string>
    <string name="add_end">Tap to add end point</string>
    <string name="add_in_between">Add in-between</string>
    <string name="start_driving">Start driving</string>
    <string name="add_address">Add address</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="type">Type the address</string>
    <string name="not_found">Not found, try another destination</string>
    <string name="waypoints_limit_reached">Waypoints limit reached</string>
    <string name="choose_start">Please, choose start point</string>
    <string name="choose_end">Please choose finish point</string>
    <string name="build_route">Build a route</string>
    <string name="finish_reached">Finish reached!</string>
    <string name="try_again">Try again</string>
    <string name="empty_state">No elements was found.\nGet back, drive the route and then</string>
    <string name="refresh">refresh</string>
    <string name="this_list">this list.</string>
    <string-array name="tabs_name">
        <item>Map</item>
        <item>History</item>
    </string-array>
</resources>
