<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_hourglass"/>

    <TextView
        android:id="@+id/tv_empty_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/image"
        android:text="@string/empty_state"/>

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_empty_text"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorAccent"
        android:text="@string/refresh"/>

    <TextView
        android:id="@+id/tv_error_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn_refresh"
        android:text="@string/this_list"/>
</RelativeLayout>