<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ScrollView
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_start_end_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_start_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_start"
                    style="@style/AddPointTextView" />

                <TextView
                    android:id="@+id/tv_end_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_end"
                    style="@style/AddPointTextView"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/points_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_start_end_container">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btn_add_between"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_in_between"
                style="@style/MapButtons"
                android:layout_below="@+id/points_recycler"/>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_driving"
                android:textColor="@color/colorAccent"
                style="@style/MapButtons"
                android:layout_below="@+id/btn_add_between"/>
        </RelativeLayout>

    </ScrollView>

</LinearLayout>